delete faults age shp + integration notebooks, polygon grid ok

--- a/1_Data_Collection_Cleaning.ipynb
+++ b/1_Data_Collection_Cleaning.ipynb
@@ -4,17 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Exploration of Datasets\n",
+    "# Table of Contents\n",
+    "| Section                      | Subsections                |\n",
+    "|-------------------------------|----------------------------|\n",
+    "|[Introduction](#introduction)| -- |\n",
+    "|[Datasets](#datasets)|[--](#)|\n",
+    "|[Exploratory Data Analysis](#exploratory-data-analysis)|[](#)|\n",
+    "|[](#)|[](#)|\n",
+    "| [Exploratory Data Analysis](#exploratory-data-analysis) | [Data Cleaning](#data-cleaning), [Data Visualization](#data-visualization) |\n",
+    "| [Feature Engineering](#feature-engineering) | [Creating New Features](#creating-new-features), [Transformations](#transformations) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
     "\n",
-    "In this initial section of the notebook, the focus is on the essential data cleaning and transformation processes needed to establish a robust dataset for the mineral exploration dashboard, specifically targeting rare earth elements (REEs).\n",
+    "Critical minerals are crucial for technologies that drive global energy, security, and economic systems. This exploratory analysis will focus on Rare Earth Elements (REEs), highlighting their unique and essential properties. Here are some key points to consider:\n",
     "\n",
-    "### Raster Data Preparation\n",
+    "- The concentration of REE production primarily in China ([figure 1](https://unctad.org/publication/digital-economy-report-2024)) exposes global supply chains to geopolitical and logistical vulnerabilities, underscoring the need for diversified supply sources [[INN](https://investingnews.com/rare-earths-forecast/)].\n",
     "\n",
-    "The raster datasets vary in resolution from 100 meters to 1000 meters. The **1000-meter** resolution rasters, which are of geophysical interest and cover the entire British Columbia region, will be used as a baseline to resample higher-resolution rasters to this regional scale. This approach aims to enhance the identification of potential prospective zones. Additionally, a mask will be applied to handle no-data values in the higher-resolution rasters by assigning NaN, ensuring data consistency across the analysis. Throughout the project, the analysis will be conducted using the **EPSG:3153 CRS** (NAD83(CSRS) / BC Environment Albers), conducive to accurate metric calculations, with the final deliverable being converted to EPSG:4269 CRS to meet specification requirements.\n",
+    "- According to the IEA’s Global Critical Minerals Outlook, the major concern in the rare earths sector is not the demand-supply gap but the high geographical concentration of mining and refining activities. This concentration significantly heightens the risk of supply disruptions in the market [[INN](https://investingnews.com/rare-earths-forecast/)].\n",
     "\n",
-    "### Iterative Approach and Regional Focus\n",
-    "- **Initial Cleaning Scope**: Initially, the data cleaning efforts will be concentrated solely on the British Columbia province. This focused approach will help us in developing the MVP (Minimum Viable Product) for the dashboard.\n",
-    "- **Data Sources**: We will begin with radiometric data and plan to incorporate additional variables in future iterations of the project, progressively enriching our dataset."
+    "- Strategically, governments are increasingly viewing REEs as critical minerals, prompting investments across the exploration, extraction, and processing stages of the rare earth supply chain [[MN](https://www.miningnewswire.com/three-key-trends-that-could-impact-rare-earths-in-2024/)]."
    ]
   },
   {
@@ -42,12 +55,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "In this initial section of the notebook, the focus is on the essential data cleaning and transformation processes needed to establish a robust dataset for the mineral exploration dashboard, specifically targeting rare earth elements (REEs).\n",
+    "\n",
+    "### Raster Data Preparation\n",
+    "\n",
+    "The raster datasets vary in resolution from 100 meters to 1000 meters. The **1000-meter** resolution rasters, which are of geophysical interest and cover the entire British Columbia region, will be used as a baseline to resample higher-resolution rasters to this regional scale. This approach aims to enhance the identification of potential prospective zones. Additionally, a mask will be applied to handle no-data values in the higher-resolution rasters by assigning NaN, ensuring data consistency across the analysis. Throughout the project, the analysis will be conducted using the **EPSG:3153 CRS** (NAD83(CSRS) / BC Environment Albers), conducive to accurate metric calculations, with the final deliverable being converted to EPSG:4269 CRS to meet specification requirements.\n",
+    "\n",
+    "### Iterative Approach and Regional Focus\n",
+    "- **Initial Cleaning Scope**: Initially, the data cleaning efforts will be concentrated solely on the British Columbia province. This focused approach will help us in developing the MVP (Minimum Viable Product) for the dashboard.\n",
+    "- **Data Sources**: We will begin with radiometric data and plan to incorporate additional variables in future iterations of the project, progressively enriching our dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +96,7 @@
     "import geopandas as gpd\n",
     "import os\n",
     "import gc\n",
+    "import numpy as np\n",
     "\n",
     "#Raster\n",
     "from osgeo import gdal, osr\n",
@@ -97,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +159,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -146,6 +177,7 @@
    "source": [
     "# target_province=admin[admin['PRENAME'].isin(['British Columbia','Nunavut','Ontario','Quebec','Yukon'])]\n",
     "target_province=admin[admin['PRENAME'].isin(['British Columbia'])]#,'Ontario','Quebec'])]\n",
+    "target_province.to_file(r'datasets\\shp\\bc_polygon.shp')\n",
     "target_province.plot()"
    ]
   },
@@ -159,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +260,7 @@
        "0  Omineca  POLYGON ((1036229.310 1265500.000, 1036445.940...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +504,7 @@
        "[1 rows x 57 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,20 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transforming from EPSG:4269 to EPSG:3153.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Transforming from EPSG:4269 to EPSG:3153.\n",
       "GeoDataFrame created with 65 records\n",
       "Geometry type: ['Point']\n",
       "CRS=EPSG:3153\n"
@@ -615,7 +641,7 @@
        "1  Tertiary  Omineca  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,11 +664,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bc_cm.to_file(r'datasets\\shp\\cmBC.shp')"
+    "bc_cm.drop(columns=['LATITUDE', 'LONGITUDE','index_right'], inplace= True)\n",
+    "bc_cm.to_file(r'datasets\\shp\\cmBC.shp')\n",
+    "bc_cm.to_json()\n"
    ]
   },
   {
@@ -654,25 +682,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['OBJECTID', 'OperationG', 'Operatio_1', 'PropertyNa', 'Property_1',\n",
-       "       'OperatorOw', 'Operator_1', 'ProvincesE', 'ProvincesF', 'Commoditie',\n",
-       "       'Commodit_1', 'Developmen', 'Developm_1', 'ActivitySt', 'Activity_1',\n",
-       "       'Latitude', 'Longitude', 'Website', 'ID', 'EA_Status', 'geometry',\n",
-       "       'index_right', 'rock_class', 'gid', 'upid', 'area_m2', 'strat_unit',\n",
-       "       'era', 'period', 'strat_age', 'strat_name', 'gp_suite', 'fm_lithodm',\n",
-       "       'mem_phase', 'rock_type', 'rk_char', 'unit_desc', 'age_max', 'age_min',\n",
-       "       'belt', 'terrane', 'basin', 'basin_age', 'project', 'src_url',\n",
-       "       'src_ref_s', 'map_comp', 'edit_date', 'pub_org'],\n",
+       "Index(['STATUS_D', 'COMMOD_C1', 'COMMOD_C2', 'COMMOD_C3', 'DEPTYPE_D1',\n",
+       "       'geometry', 'rock_class', 'strat_unit', 'rock_type', 'age_max',\n",
+       "       'age_min', 'belt'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
