--- a/Tech_Treassure_for_REE_minerals.ipynb
+++ b/Tech_Treassure_for_REE_minerals.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "| Section                      | Subsections                |\n",
+    "|-------------------------------|----------------------------|\n",
+    "|[Introduction](#introduction)| [Initial Ideas](#iniitial-ideas) |\n",
+    "| [Exploratory Data Analysis](#exploratory-data-analysis) | [Categorical Variables](#categorical-variables), [Numerical Variable](#numerical-variables) |\n",
+    "| [Feature Engineering](#feature-engineering) | [PCA](#), [K-Means](#), [Transformations](#transformations) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "Critical minerals are crucial for technologies that drive global energy, security, and economic systems. This exploratory analysis will focus on Rare Earth Elements (REEs), highlighting their unique and essential properties. Here are some key points to consider:\n",
+    "\n",
+    "- The concentration of REE production primarily in China ([figure 1](https://unctad.org/publication/digital-economy-report-2024)) exposes global supply chains to geopolitical and logistical vulnerabilities, underscoring the need for diversified supply sources [[INN](https://investingnews.com/rare-earths-forecast/)].\n",
+    "\n",
+    "- According to the IEA’s Global Critical Minerals Outlook, the major concern in the rare earths sector is not the demand-supply gap but the high geographical concentration of mining and refining activities. This concentration significantly heightens the risk of supply disruptions in the market [[INN](https://investingnews.com/rare-earths-forecast/)].\n",
+    "\n",
+    "- Strategically, governments are increasingly viewing REEs as critical minerals, prompting investments across the exploration, extraction, and processing stages of the rare earth supply chain [[MN](https://www.miningnewswire.com/three-key-trends-that-could-impact-rare-earths-in-2024/)].\n",
+    "\n",
+    "### Iniitial ideas\n",
+    "The model would incorporate raster data and linear features, such as the distance to the nearest fault, nearest geological contact, age, and geochemical data. This approach was inspired by several previous studies and analyses.\n",
+    "\n",
+    "The goal was to develop an ensemble model with a broad understanding of REE deposits, allowing for generalized predictions over larger areas. However, challenges arose related to the scale of available data for each deposit, as well as limitations in computational resources. After further consideration, I decided to adopt a simpler approach focused on the British Columbia region, with the intention of conducting a more regional study.\n",
+    "\n",
+    "This experiment will now focus on 65 known points of Critical Mineral showings and prospecting areas in British Columbia. For REE commodities types 1, 2, and 3, I will label 38 points as mineralized with varying levels of confidence (high/low). The remaining points will be categorized as \"non-mineralized\" (at least not for REE prospects). This will provide a reasonably balanced dataset for the random forest model.\n",
+    "\n",
+    "To start, I will perform a PCA on the raster data<sup>1</sup>  to reduce dimensionality. This will be followed by K-means clustering, which will be combined with additional features for the random forest model.\n",
+    "\n",
+    "<sup>1</sup>  _Please note that the RAD raster data might not have been transformed accurately from the source_\n",
+    "\n",
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "In the Data_Cleaninng_Preprocessing notebook all the standarization for geospatial consistency was made, however, here I'll explore for potential correlation or patterns in the data, as well as some transformation necesary in order to try to implement a simple machine learning model.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -20,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Categorical Variable\n",
+    "### Categorical Variables\n",
     "So far our shp\\geodataframe will have only categorical variables. \n",
     "\n",
     "columns=['DEPTYPE_D1','rock_class', 'belt']"
@@ -28,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
