readme, conclusions update

--- a/2_Tech_Treassure_for_REE_minerals.ipynb
+++ b/2_Tech_Treassure_for_REE_minerals.ipynb
@@ -27,15 +27,18 @@
     "- Strategically, governments are increasingly viewing REEs as critical minerals, prompting investments across the exploration, extraction, and processing stages of the rare earth supply chain [[MN](https://www.miningnewswire.com/three-key-trends-that-could-impact-rare-earths-in-2024/)].\n",
     "\n",
     "### Iniitial ideas\n",
-    "The model would incorporate raster data and linear features, such as the distance to the nearest fault, nearest geological contact, age, and geochemical data. This approach was inspired by several previous studies and analyses.\n",
+    "- The model would incorporate raster data and linear features, such as the distance to the nearest fault, nearest geological contact, age, and geochemical data. This approach was inspired by several previous studies and analyses such as the [Prospectivity Mapping of Ni-Co Laterites in the Lachlan Orogen](https://github.com/EarthByte/MPM_Lachlan_Laterite), and [Tin-Tungsten Prospecting with Machine Learning in NE Tasmania, Australia](https://colab.research.google.com/drive/168PSo21-Jkwdz8xOmr5-rX9_DL3SInCN?usp=sharing).\n",
     "\n",
-    "The goal was to develop an ensemble model with a broad understanding of REE deposits, allowing for generalized predictions over larger areas. However, challenges arose related to the scale of available data for each deposit, as well as limitations in computational resources. After further consideration, I decided to adopt a simpler approach focused on the British Columbia region, with the intention of conducting a more regional study.\n",
+    "- The goal was to develop an ensemble model with a broad understanding of REE deposits, allowing for generalized predictions over larger areas. However, challenges arose related to the scale of available data for each deposit, as well as limitations in computational resources. After further consideration, I decided to adopt a simpler approach focused on the British Columbia region, with the intention of conducting a more regional study.\n",
     "\n",
-    "This experiment will now focus on 65 known points of Critical Mineral showings and prospecting areas in British Columbia. For REE commodities types 1, 2, and 3, I will label 38 points as mineralized with varying levels of confidence (high/low). The remaining points will be categorized as \"non-mineralized\" (at least not for REE prospects). This will provide a reasonably balanced dataset for the random forest model.\n",
+    "- A `PCA` was performed on the raster data<sup>1</sup> to reduce dimensionality, followed by `unsupervised models` like `K-means` clustering. Unfortunately, these models did not produce any meaningful clusters, likely due to the complexity of the underlying spatial patterns or the limited number of training samples. \n",
     "\n",
-    "To start, I will perform a PCA on the raster data<sup>1</sup>  to reduce dimensionality. This will be followed by K-means clustering, which will be combined with additional features for the random forest model.\n",
+    "- Afterward, a `Random Forest` model was applied to the dataset, but it performed poorly. The analysis focused on 65 known points of Critical Mineral showings and prospecting areas in British Columbia. For REE commodity types 1, 2, and 3, 38 points were labeled as mineralized with varying confidence levels (high/low), while the remaining points were categorized as \"non-mineralized\" (at least for REE prospects). While this initially seemed to provide a reasonably balanced dataset for the Random Forest model, it may have introduced additional complexity. As a result, the model will be revisited outside of the challenge using only two categories and the `grid_no_bc` grid (check the Legacy notebook for further understanding), with the goal of reducing complexity and improving performance.\n",
     "\n",
     "<sup>1</sup>  _Please note that the RAD raster data might not have been transformed accurately from the source_\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "## Exploratory Data Analysis\n",
     "\n",
@@ -764,47 +767,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `DBSCAN`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DBSCAN found 1 clusters.\n",
-      "DBSCAN did not find enough clusters.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.cluster import DBSCAN\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "\n",
-    "# Try different values of eps and min_samples\n",
-    "dbscan = DBSCAN(eps=10, min_samples=4)  # Start with a larger eps and adjust based on results\n",
-    "dbscan_labels = dbscan.fit_predict(combined_data_scaled)\n",
-    "\n",
-    "# Check how many clusters DBSCAN found\n",
-    "n_clusters = len(set(dbscan_labels)) - (1 if -1 in dbscan_labels else 0)  # Exclude noise points (-1)\n",
-    "print(f\"DBSCAN found {n_clusters} clusters.\")\n",
-    "\n",
-    "# Calculate the silhouette score if DBSCAN finds more than 1 cluster\n",
-    "if n_clusters > 1:\n",
-    "    silhouette_avg = silhouette_score(combined_data_scaled, dbscan_labels)\n",
-    "    print(f\"Silhouette Score for DBSCAN: {silhouette_avg:.3f}\")\n",
-    "else:\n",
-    "    print(\"DBSCAN did not find enough clusters.\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Random Forest\n",
     "\n",
     "3-way Data Split:\n",
@@ -887,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "cross validatrion"
+    "cross validation"
    ]
   },
   {
@@ -912,7 +874,7 @@
     "import numpy as np\n",
     "\n",
     "# Define your features and labels\n",
-    "X = combined_data_scaled  # Features (scaled numerical + categorical)\n",
+    "X = combined_data_scaled  # Features (scaled numerical)\n",
     "y = final_df['label_1']   # Target (labels)\n",
     "\n",
     "# Initialize the Random Forest model\n",
