--- a/2_Tech_Treassure_for_REE_minerals.ipynb
+++ b/2_Tech_Treassure_for_REE_minerals.ipynb
@@ -774,8 +774,10 @@
     "\n",
     "3-way Data Split:\n",
     "Training Set: Used for training the model.\n",
-    "Validation Set: Used for tuning hyperparameters and evaluating model performance during development. You can use this set to try different model configurations and evaluate improvements.\n",
-    "Holdout (Final Test) Set: This is the portion of the data that you set aside and do not use until you are completely done with model development. This provides a completely unbiased final evaluation of your model."
+    "\n",
+    "Validation Set: Used for tuning hyperparameters and evaluating model performance during development. This set is for try different model configurations and evaluate improvements.\n",
+    "\n",
+    "Holdout (Final Test) Set: This is the portion of the data that do not use until you are completely done with model development. This provides a completely unbiased final evaluation of the model."
    ]
   },
   {
