--- a/2_Tech_Treassure_for_REE_minerals.ipynb
+++ b/2_Tech_Treassure_for_REE_minerals.ipynb
@@ -602,7 +602,6 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Let's assume these are your categorical and numerical\n",
     "#categorical = ['COMMOD_C1', 'COMMOD_C2', 'COMMOD_C3', 'DEPTYPE_D1', 'rock_class','belt']  # Categorical columns\n",
     "numerical = ['GRAV_1stVerticalDerivative',\n",
     "       'GRAV_HorizontalGradient', 'GRAV_IsostaticResidual', 'MAG', 'MAG1VD']\n",
@@ -802,7 +801,7 @@
     "# Now we have:\n",
     "# - X_train, y_train: For training the model\n",
     "# - X_val, y_val: For tuning and evaluating the model during development\n",
-    "# - X_holdout, y_holdout: For the final evaluation after you're done with all tuning"
+    "# - X_holdout, y_holdout: For the final evaluation after we're done with all tuning"
    ]
   },
   {
@@ -891,7 +890,7 @@
     "# Define a custom scoring function to get precision, recall, and f1-score for each fold\n",
     "scoring = make_scorer(precision_recall_fscore_support, average='weighted')\n",
     "\n",
-    "# Perform cross-validation (you can also use cross_val_score for a simpler approach)\n",
+    "# Perform cross-validation\n",
     "precision_scores = []\n",
     "recall_scores = []\n",
     "f1_scores = []\n",
@@ -1201,7 +1200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "geo_env",
    "language": "python",
    "name": "python3"
   },
