drop categorical columns correct

--- a/2_Tech_Treassure_for_REE_minerals.ipynb
+++ b/2_Tech_Treassure_for_REE_minerals.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "0                                          21.412943       "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,43 +385,6 @@
     "#Join this DataFrame with the deposits DataFrame to keep geographic info\n",
     "final_df = pd.concat([deposits.reset_index(drop=True), features_important], axis=1)\n",
     "final_df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df.drop(columns=['COMMOD_C1', 'COMMOD_C2', 'COMMOD_C3', 'DEPTYPE_D1', 'rock_class',\n",
-    "       'belt'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['geometry',\n",
-       "       'datasets\\raster\\resampled\\resampled_GRAV_1stVerticalDerivative.tif',\n",
-       "       'datasets\\raster\\resampled\\resampled_GRAV_HorizontalGradient.tif',\n",
-       "       'datasets\\raster\\resampled\\resampled_GRAV_IsostaticResidual.tif',\n",
-       "       'datasets\\raster\\resampled\\resampled_MAG.tif',\n",
-       "       'datasets\\raster\\resampled\\resampled_MAG1VD.tif',\n",
-       "       'datasets\\raster\\resampled\\resampled_RAD_PotassiumK.tif'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_df.columns"
    ]
   },
   {
@@ -443,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +428,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,9 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label_1\n",
+       "0    27\n",
+       "1    21\n",
+       "2    17\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Conditions:\n",
@@ -562,18 +540,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ##Not using the categorical columns\n",
+    "# final_df.drop(columns=['COMMOD_C1', 'COMMOD_C2', 'COMMOD_C3', 'DEPTYPE_D1', 'rock_class',\n",
+    "#        'belt'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['geometry', 'GRAV_1stVerticalDerivative', 'GRAV_HorizontalGradient',\n",
-       "       'GRAV_IsostaticResidual', 'MAG', 'MAG1VD', 'RAD_PotassiumK', 'label_1'],\n",
+       "Index(['COMMOD_C1', 'COMMOD_C2', 'COMMOD_C3', 'DEPTYPE_D1', 'rock_class',\n",
+       "       'belt', 'geometry', 'GRAV_1stVerticalDerivative',\n",
+       "       'GRAV_HorizontalGradient', 'GRAV_IsostaticResidual', 'MAG', 'MAG1VD',\n",
+       "       'RAD_PotassiumK'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +621,7 @@
        "(65, 5)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +780,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
-    "X = combined_data_scaled  # Features (scaled numerical + categorical)\n",
+    "X = combined_data_scaled  # Features (scaled numerical) + NO categorical)\n",
     "y = final_df['label_1']  # Target (labels)\n",
     "\n",
     "# Split into training+validation and holdout (final test)\n",
@@ -806,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,10 +875,10 @@
     "# Initialize the Random Forest model\n",
     "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
-    "# Set up stratified k-fold cross-validation (to ensure each fold has a similar class distribution)\n",
+    "# stratified k-fold cross-validation (to ensure each fold has a similar class distribution)\n",
     "kf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "# Define a custom scoring function to get precision, recall, and f1-score for each fold\n",
+    "# custom scoring function to get precision, recall, and f1-score for each fold\n",
     "scoring = make_scorer(precision_recall_fscore_support, average='weighted')\n",
     "\n",
     "# Perform cross-validation\n",
@@ -934,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
